--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "4.13.3"
+    "express": "4.13.3",
+    "mqtt": "^2.5.0"
   },
   "repository": {
     "type": "git",
