--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "4.13.3",
     "mqtt": "^2.5.0"
   },
