--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "4.13.3",
-    "mqtt": "^2.5.0"
+    "mqtt": "^2.5.0",
+    "multer" : "1.3.0"
   },
   "repository": {
     "type": "git",
