--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "HTTP to MQTT bridge",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js -c ./config.json",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
